WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/OnlineApplicationDriverSetup__c.object-meta.xml
<CustomObject>
    <description>Forseva Online Application Project</description>
    <label>Online Application Driver Setup</label>
    <nameField>
        <displayFormat>Driver Setup-{0}</displayFormat>
        <label>Driver Setup Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Online Application Driver Setups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>