WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/fields/ATM_Access__c.field-meta.xml
<CustomField>
    <fullName>ATM_Access__c</fullName>
    <inlineHelpText>Allows ATM access for withdrawals from your Fleet One account.</inlineHelpText>
    <label>ATM Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>