WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/fields/Cash_Limit__c.field-meta.xml
<CustomField>
    <fullName>Cash_Limit__c</fullName>
    <label>Cash</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>