WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/fields/Driver_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver First Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>