WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/fields/Driver_ID__c.field-meta.xml
<CustomField>
    <fullName>Driver_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The code the driver or employee will be asked to enter at the pump or terminal with each purchase.</inlineHelpText>
    <label>Driver ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>