WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/fields/Driver_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Driver Last Name</label>
    <length>12</length>
    <type>Text</type>
</CustomField>