WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the employee who drives the company vehicle.</inlineHelpText>
    <label>Driver Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>