WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/fields/Fuel_Grade__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Grade__c</fullName>
    <inlineHelpText>Grades of fuel that are preferred to be purchased.  (Ex. Only diesel an be purchased.)</inlineHelpText>
    <label>Fuel Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
                <default>true</default>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>Diesel and Gasoline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>