WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/fields/Misc_Limit__c.field-meta.xml
<CustomField>
    <fullName>Misc_Limit__c</fullName>
    <inlineHelpText>Items other than fuel, maintenance, and additives.  Examples:  car wash, snacks, or beverages.</inlineHelpText>
    <label>Misc.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>