WexGit/Wex_DX/force-app/main/default/objects/OnlineApplicationDriverSetup__c/fields/Online_Application__c.field-meta.xml
<CustomField>
    <fullName>Online_Application__c</fullName>
    <label>Online Application</label>
    <referenceTo>OnlineApplication__c</referenceTo>
    <relationshipLabel>Driver Setups</relationshipLabel>
    <relationshipName>Online_Application_Driver_Setups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>